--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
            </div>
            
            <div class="menu-items">
-              <a href="" id="event-btn">Event</a>
-              <a href="" id="photos-btn">Photos</a>
+              <a href="">Event</a>
+              <a href="">Photos</a>
            </div>
 
            <nav class="menu">
