--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
            </div>
            
            <div class="menu-items">
-              <a href="">Event</a>
-              <a href="">Photos</a>
+              <a href="#">Event</a>
+              <a href="#">Photos</a>
+              <a href="#">RSVP</a>
            </div>
 
            <nav class="menu">
