--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
            
            <div class="menu-items">
               <a href="#">Event</a>
-              <a href="#">Photos</a>
+              <a href="photos.html">Photos</a>
               <a href="#">RSVP</a>
            </div>
 
