--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                 "How could a moment last forever ? " 
             </h2>
         </main>  
+        
+        <footer>
+            <p>&copy 2018 Nacho Spadaccini</p>
+        </footer>
 
         <script src="js/main.js"></script>   
     </body>
