--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
         </header>
 
         <main id="home">
-            <h1 class="lg-heading">
-                Our <span class="text-secondary">Wedding</span>
-            </h1>
-            <h2 class="sm-heading">
-                "How could a moment last forever ? " 
-            </h2>
+            <div class="text">    
+                <h1 class="lg-heading">
+                    Our <span class="text-secondary">Wedding</span>
+                </h1>
+                <h2 class="sm-heading">
+                    "How could a moment last forever ? " 
+                </h2>
+            </div>    
         </main>  
         
         <footer>
