--- a/photos.html
+++ b/photos.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-		<title>Photos</title>
+		<title>K&N | Photos</title>
 		<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
