--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            <div class="menu-items">
               <a href="#">Event</a>
               <a href="photos.html">Photos</a>
-              <a href="#">RSVP</a>
+              <a href="rsvp.html">RSVP</a>
            </div>
 
            <nav class="menu">
