--- a/photos.html
+++ b/photos.html
@@ -25,7 +25,7 @@
               <a href="index.html">Home</a>
               <a href="#">Event</a>
               <a href="photos.html">Photos</a>
-              <a href="#">RSVP</a>
+              <a href="rsvp.html">RSVP</a>
            </div>
 
            <nav class="menu">
