--- a/rsvp.html
+++ b/rsvp.html
@@ -41,7 +41,7 @@
     </header>
    
     <div class="form">   
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfvSrK2gibH1VDKoZg-8LdUGcs-1WjxYmSmZGfFNaTAqyfr-g/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfvSrK2gibH1VDKoZg-8LdUGcs-1WjxYmSmZGfFNaTAqyfr-g/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>   
     
     <footer>
