--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
               <a href="#">Event</a>
               <a href="photos.html">Photos</a>
               <a href="rsvp.html">RSVP</a>
+              <a href="#">FAQ</a>
            </div>
 
            <nav class="menu">
@@ -47,10 +48,6 @@
                 </h2>
             </div>    
         </main>  
-        
-        <footer>
-            <p>&copy 2018 Nacho Spadaccini</p>
-        </footer>
 
         <script src="js/main.js"></script>   
     </body>
