--- a/photos.html
+++ b/photos.html
@@ -26,6 +26,7 @@
               <a href="#">Event</a>
               <a href="photos.html">Photos</a>
               <a href="rsvp.html">RSVP</a>
+              <a href="#">FAQ</a>
            </div>
 
            <nav class="menu">
