--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a href="#">Event</a>
               <a href="photos.html">Photos</a>
               <a href="rsvp.html">RSVP</a>
-              <a href="#">FAQ</a>
+              <a href="faq.html">FAQ</a>
            </div>
 
            <nav class="menu">
