--- a/rsvp.html
+++ b/rsvp.html
@@ -26,7 +26,7 @@
               <a href="#">Event</a>
               <a href="photos.html">Photos</a>
               <a href="rsvp.html">RSVP</a>
-              <a href="#">FAQ</a>
+              <a href="faq.html">FAQ</a>
            </div>
 
            <nav class="menu">
