--- a/faq.html
+++ b/faq.html
@@ -52,6 +52,8 @@
            
            <br>
            
+           <div class="color0"></div>
+           <div class="color01"></div>
            <div class="color1"></div>
            <div class="color2"></div>
            <div class="color3"></div>
