--- a/faq.html
+++ b/faq.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/faq.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
 </head>
 <body>
    
@@ -41,7 +42,7 @@
            </nav>
     </header>
    
-    <div class="form">   
+    <div class="form animated fadeInUp">   
         <div class="questions">
            <h2>What should I wear?</h2>
            <p>Formal attire.</p>
