--- a/rsvp.html
+++ b/rsvp.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/rsvp.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
 </head>
 <body>
    
@@ -41,7 +42,7 @@
            </nav>
     </header>
    
-    <div class="form">   
+    <div class="form animated fadeInUp">   
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfvSrK2gibH1VDKoZg-8LdUGcs-1WjxYmSmZGfFNaTAqyfr-g/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>   
     
