--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
     </head>
     <body>
        <header>
+          <div class="dateDisplay" id="date">    
+                <div class="dateBox">    
+                    <p id="days"></p>    
+                    <p>Days</p>
+                </div>  
+                <div class="dateBox">    
+                    <p id="hours"></p>
+                    <p>Hours</p>
+                </div> 
+                <div class="dateBox">    
+                    <p id="minutes"></p>
+                    <p>Minutes</p>
+                </div>  
+                <div class="dateBox">    
+                    <p id="seconds"></p>
+                    <p>Seconds</p>
+                </div> 
+            </div>  
            <div class="menu-btn">
                <div class="btn-line"></div>
                <div class="btn-line"></div>
@@ -45,7 +63,7 @@
                 </h1>
                 <h2 class="sm-heading">
                     "How could a moment last forever ? " 
-                </h2>
+                </h2>     
             </div>    
         </main>  
 
