--- a/faq.html
+++ b/faq.html
@@ -129,7 +129,7 @@
         </div>
     </div>   
     
-    <script src="js/main.js"></script>
+    <script src="js/secondary.js"></script>
     
 </body>
 </html>
