--- a/rsvp.html
+++ b/rsvp.html
@@ -46,7 +46,7 @@
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfvSrK2gibH1VDKoZg-8LdUGcs-1WjxYmSmZGfFNaTAqyfr-g/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>   
     
-    <script src="js/main.js"></script>
+    <script src="js/secondary.js"></script>
     
 </body>
 </html>
