--- a/photos.html
+++ b/photos.html
@@ -77,7 +77,7 @@
               <!--<div id="caption"></div>-->
         </div>
         
-        <script src="js/secondary.js"></script>   
+        <script src="js/main.js"></script>   
 
 	</body>
 
