--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            </div>
            
            <div class="menu-items">
-              <a href="#">Event</a>
+              <!-- <a href="#">Event</a> -->
               <a href="photos.html">Photos</a>
               <a href="rsvp.html">RSVP</a>
               <a href="faq.html">FAQ</a>
