--- a/faq.html
+++ b/faq.html
@@ -24,7 +24,7 @@
            
            <div class="menu-items">
               <a href="index.html">Home</a>
-              <a href="#">Event</a>
+              <!-- <a href="#">Event</a> -->
               <a href="photos.html">Photos</a>
               <a href="rsvp.html">RSVP</a>
               <a href="#">FAQ</a>
