--- a/photos.html
+++ b/photos.html
@@ -23,7 +23,7 @@
            
            <div class="menu-items">
               <a href="index.html">Home</a>
-              <a href="#">Event</a>
+              <!-- <a href="#">Event</a> -->
               <a href="photos.html">Photos</a>
               <a href="rsvp.html">RSVP</a>
               <a href="faq.html">FAQ</a>
