--- a/photos.html
+++ b/photos.html
@@ -4,21 +4,13 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 		<title>K&N | Photos</title>
 		<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/photos.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135520792-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-		  gtag('config', 'UA-135520792-1');
-		</script>
 	</head>
 	<body>
 	
@@ -30,11 +22,29 @@
            </div>
            
            <div class="menu-items">
-              <a href="index.html">Home</a>
-              <!-- <a href="#">Event</a> -->
+              <a href="index.html" id="home">Home</a>
+              <a href="#">Event</a>
               <a href="photos.html">Photos</a>
               <a href="rsvp.html">RSVP</a>
               <a href="faq.html">FAQ</a>
+              <div class="dateDisplay" id="date">    
+                    <div class="dateBox">    
+                        <p id="days"></p>    
+                        <p>Days</p>
+                    </div>  
+                    <div class="dateBox">    
+                        <p id="hours"></p>
+                        <p>Hours</p>
+                    </div> 
+                    <div class="dateBox">    
+                        <p id="minutes"></p>
+                        <p>Minutes</p>
+                    </div>  
+                    <div class="dateBox">    
+                        <p id="seconds"></p>
+                        <p>Seconds</p>
+                    </div> 
+              </div> 
            </div>
 
            <nav class="menu">
