--- a/index.html
+++ b/index.html
@@ -34,26 +34,9 @@
               <a href="index.html" id="home">Home</a>
               <a href="#">Event</a>
               <a href="photos.html">Photos</a>
+              <a href="countdown.html">Countdown</a>
               <a href="rsvp.html">RSVP</a>
               <a href="faq.html">FAQ</a>
-              <div class="dateDisplay" id="date">    
-                    <div class="dateBox">    
-                        <p id="days"></p>    
-                        <p>Days</p>
-                    </div>  
-                    <div class="dateBox">    
-                        <p id="hours"></p>
-                        <p>Hours</p>
-                    </div> 
-                    <div class="dateBox">    
-                        <p id="minutes"></p>
-                        <p>Minutes</p>
-                    </div>  
-                    <div class="dateBox">    
-                        <p id="seconds"></p>
-                        <p>Seconds</p>
-                    </div> 
-              </div> 
            </div>
            
            
