--- a/countdown.html
+++ b/countdown.html
@@ -78,7 +78,7 @@
               </div> 
         </div> 
     </div>      
-    <!-- <div class="fireflyEffect"></div> -->
+    <div class="fireflyEffect"></div>
     
     <script src="js/secondary.js"></script>
     
