--- a/photos.html
+++ b/photos.html
@@ -33,10 +33,10 @@
            </div>
            
            <div class="menu-items">
-              <a href="index.html" id="home">Home</a>
+              <a href="index.html">Home</a>
               <a href="countdown.html">Countdown</a>              
               <a href="#">Event</a>
-              <a href="photos.html">Photos</a>
+              <a href="photos.html" id="activePage">Photos</a>
               <a href="rsvp.html">RSVP</a>
               <a href="faq.html">FAQ</a>
            </div>
