--- a/rsvp.html
+++ b/rsvp.html
@@ -34,11 +34,11 @@
            </div>
            
            <div class="menu-items">
-              <a href="index.html" id="home">Home</a>
+              <a href="index.html">Home</a>
               <a href="countdown.html">Countdown</a>              
               <a href="#">Event</a>
               <a href="photos.html">Photos</a>
-              <a href="rsvp.html">RSVP</a>
+              <a href="rsvp.html" id="activePage">RSVP</a>
               <a href="faq.html">FAQ</a>
            </div>
 
