--- a/countdown.html
+++ b/countdown.html
@@ -34,8 +34,8 @@
            </div>
 
            <div class="menu-items">
-              <a href="index.html" id="home">Home</a>
-              <a href="countdown.html">Countdown</a>
+              <a href="index.html">Home</a>
+              <a href="countdown.html" id="activePage">Countdown</a>
               <a href="#">Event</a>
               <a href="photos.html">Photos</a>
               <a href="rsvp.html">RSVP</a>
