--- a/faq.html
+++ b/faq.html
@@ -34,12 +34,12 @@
            </div>
            
            <div class="menu-items">
-              <a href="index.html" id="home">Home</a>
+              <a href="index.html">Home</a>
               <a href="countdown.html">Countdown</a>
               <a href="#">Event</a>
               <a href="photos.html">Photos</a>
               <a href="rsvp.html">RSVP</a>
-              <a href="#">FAQ</a>
+              <a href="#" id="activePage">FAQ</a>
            </div>
 
            <nav class="menu">
