--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
            </div>
            
            <div class="menu-items">
-              <a href="index.html" id="home">Home</a>
+              <a href="index.html" id="activePage">Home</a>
               <a href="countdown.html">Countdown</a>              
               <a href="#">Event</a>
               <a href="photos.html">Photos</a>
