--- a/faq.html
+++ b/faq.html
@@ -36,7 +36,7 @@
            <div class="menu-items">
               <a href="index.html">Home</a>
               <a href="countdown.html">Countdown</a>
-              <a href="#">Event</a>
+              <!-- <a href="#">Event</a> -->
               <a href="photos.html">Photos</a>
               <a href="rsvp.html">RSVP</a>
               <a href="#" id="activePage">FAQ</a>
