--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
            <div class="menu-items">
               <a href="index.html" id="activePage">Home</a>
               <a href="countdown.html">Countdown</a>              
-              <a href="#">Event</a>
+              <!-- <a href="#">Event</a> -->
               <a href="photos.html">Photos</a>
               <a href="rsvp.html">RSVP</a>
               <a href="faq.html">FAQ</a>
