--- a/photos.html
+++ b/photos.html
@@ -35,7 +35,7 @@
            <div class="menu-items">
               <a href="index.html">Home</a>
               <a href="countdown.html">Countdown</a>              
-              <a href="#">Event</a>
+              <!-- <a href="#">Event</a> -->
               <a href="photos.html" id="activePage">Photos</a>
               <a href="rsvp.html">RSVP</a>
               <a href="faq.html">FAQ</a>
