--- a/rsvp.html
+++ b/rsvp.html
@@ -36,7 +36,7 @@
            <div class="menu-items">
               <a href="index.html">Home</a>
               <a href="countdown.html">Countdown</a>              
-              <a href="#">Event</a>
+              <!-- <a href="#">Event</a> -->
               <a href="photos.html">Photos</a>
               <a href="rsvp.html" id="activePage">RSVP</a>
               <a href="faq.html">FAQ</a>
