--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
           gtag('config', 'UA-135520792-1');
         </script>
+        
+        <!-- Start of  Zendesk Widget script -->
+        <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=bd90c340-a97a-449b-a6ba-23f13ba97259"> </script>
+        <!-- End of  Zendesk Widget script -->
 
     </head>
     <body>
