--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     Our <span class="text-secondary">Wedding</span>
                 </h1>
                 <h2 class="sm-heading">
-                    "How could a moment last forever ? " 
+                    " There may be more beautiful times, but this one is ours." 
                 </h2>          
             </div>    
         </main>  
