--- a/countdown.html
+++ b/countdown.html
@@ -52,6 +52,13 @@
                    <h1>Kiara</h1>
                </div>
            </nav>
+           <div class="menu-mobile">
+            <a href="index.html">Home</a>
+            <a href="countdown.html" id="activePage">Countdown</a>              
+            <a href="photos.html">Photos</a>
+            <a href="rsvp.html">RSVP</a>
+            <a href="faq.html">FAQ</a>
+         </div>
     </header>
 
     <div class="countdownContainer animated fadeInUp">    
@@ -61,26 +68,26 @@
                <div class="dateDisplay" id="date">    
                     <div class="dateBox">    
                         <p id="days"></p>    
-                        <p id="dateText">Days</p>
+                        <p class="dateText">Days</p>
                     </div>  
                     <div class="dateBox">    
                         <p id="hours"></p>
-                        <p id="dateText">Hours</p>
+                        <p class="dateText">Hours</p>
                     </div> 
                     <div class="dateBox">    
                         <p id="minutes"></p>
-                        <p id="dateText">Minutes</p>
+                        <p class="dateText">Minutes</p>
                     </div>  
                     <div class="dateBox">    
                         <p id="seconds"></p>
-                        <p id="dateText">Seconds</p>
+                        <p class="dateText">Seconds</p>
                     </div> 
               </div> 
         </div> 
     </div>      
-<!--    <div class="fireflyEffect"></div>-->
     
-    <script src="js/secondary.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/countdown.js"></script>
     
 </body>
 </html>
