--- a/faq.html
+++ b/faq.html
@@ -52,6 +52,13 @@
                    <h1>Kiara</h1>
                </div>
            </nav>
+           <div class="menu-mobile">
+            <a href="index.html">Home</a>
+            <a href="countdown.html">Countdown</a>              
+            <a href="photos.html">Photos</a>
+            <a href="rsvp.html">RSVP</a>
+            <a href="faq.html" id="activePage">FAQ</a>
+         </div>
     </header>
    
     <div class="form animated fadeInUp">   
@@ -159,7 +166,7 @@
         </div>
     </div>   
     
-    <script src="js/secondary.js"></script>
+    <script src="js/main.js"></script>
     
 </body>
 </html>
