--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                    <h1>Kiara</h1>
                </div>
            </nav>
+
+            <div class="menu-mobile">
+                <a href="index.html" id="activePage">Home</a>
+                <a href="countdown.html">Countdown</a>              
+                <a href="photos.html">Photos</a>
+                <a href="rsvp.html">RSVP</a>
+                <a href="faq.html">FAQ</a>
+             </div>
         </header>
 
         <main id="home">
