--- a/rsvp.html
+++ b/rsvp.html
@@ -52,13 +52,20 @@
                    <h1>Kiara</h1>
                </div>
            </nav>
+           <div class="menu-mobile">
+            <a href="index.html">Home</a>
+            <a href="countdown.html">Countdown</a>              
+            <a href="photos.html">Photos</a>
+            <a href="rsvp.html" id="activePage">RSVP</a>
+            <a href="faq.html">FAQ</a>
+         </div>
     </header>
    
     <div class="form animated fadeInUp">   
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfvSrK2gibH1VDKoZg-8LdUGcs-1WjxYmSmZGfFNaTAqyfr-g/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>   
     
-    <script src="js/secondary.js"></script>
+    <script src="js/main.js"></script>
     
 </body>
 </html>
