--- a/faq.html
+++ b/faq.html
@@ -97,7 +97,7 @@
            <h2>Where is the ceremony?</h2>
            <p>Thunderbird Resorts & Casino - Poro Point, La Union.</p>
            <br>
-           <a href="https://www.thunderbird-asia.com/poro-point-la-union-hotel/">Visit Website</a>
+           <a href="https://www.thunderbird-asia.com/poro-point-la-union-hotel/" target="_blank">Visit Website</a>
            
            <hr>
            
