--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"> 
         <meta charset="UTF-8">
+        
+        <meta property="og:image" content="img/logo.png">
+        
         <title>K&N</title>
         <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
