--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         
         <meta property="og:image" content="img/logo.png">
+        <meta property="og:description" content="There may be more beautiful times, but this one is ours.">
+
         
         <title>K&N</title>
         <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
