--- a/faq.html
+++ b/faq.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="css/faq.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
+            
+    <link rel="icon" href="img/logo.png">
+
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135520792-1"></script>
